@@ -14,6 +14,7 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.MockitoAnnotations;
 import org.slf4j.LoggerFactory;
+import uk.gov.hmcts.reform.hmc.client.futurehearing.ErrorDetails;
 import uk.gov.hmcts.reform.hmc.client.futurehearing.FutureHearingErrorDecoder;
 import uk.gov.hmcts.reform.hmc.errorhandling.AuthenticationException;
 import uk.gov.hmcts.reform.hmc.errorhandling.BadFutureHearingRequestException;
@@ -23,12 +24,14 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static uk.gov.hmcts.reform.hmc.client.futurehearing.FutureHearingErrorDecoder.INVALID_REQUEST;
 import static uk.gov.hmcts.reform.hmc.client.futurehearing.FutureHearingErrorDecoder.INVALID_SECRET;
 import static uk.gov.hmcts.reform.hmc.client.futurehearing.FutureHearingErrorDecoder.REQUEST_NOT_FOUND;
@@ -38,16 +41,20 @@ class FutureHearingErrorDecoderTest {
 
     private String methodKey = null;
     private Response response;
-    private byte[] byteArrray;
-    private static final String INPUT_STRING = "{\n"
-        + "    \"errCode\": \"1000\",\n"
-        + "    \"errorDesc\": \"'300' is not a valid value for 'caseCourt.locationId'\",\n"
-        + "    \"errorLinkId\": null,\n"
-        + "    \"exception\": null\n"
-        + "}";
+    private byte[] byteArray;
+    private static final String INPUT_STRING = """
+        {
+            "errCode": "1000",
+            "errorDesc": "'300' is not a valid value for 'caseCourt.locationId'",
+            "errorLinkId": null,
+            "exception": null,
+            "statusCode": null,
+            "message": null
+        }""";
     private static final String EXPECTED_ERROR = "Response from FH failed with HTTP code %s, error code 1000, "
-        + "error message ''300' is not a valid value for 'caseCourt.locationId'',"
-        +  " AuthErrorCode null, AuthErrorMessage 'null'";
+        + "error message ''300' is not a valid value for 'caseCourt.locationId'', "
+        + "AuthErrorCode null, AuthErrorMessage 'null', "
+        + "ApiStatusCode null, ApiErrorMessage 'null'";
     private RequestTemplate template;
 
     private final Logger logger = (Logger) LoggerFactory.getLogger(FutureHearingErrorDecoder.class);
@@ -58,7 +65,7 @@ class FutureHearingErrorDecoderTest {
     @BeforeEach
      void setUp() {
         MockitoAnnotations.openMocks(this);
-        byteArrray = INPUT_STRING.getBytes();
+        byteArray = INPUT_STRING.getBytes();
         logger.setLevel(Level.INFO);
     }
 
@@ -69,11 +76,7 @@ class FutureHearingErrorDecoderTest {
         listAppender.start();
         logger.addAppender(listAppender);
 
-        response = Response.builder()
-            .body(byteArrray)
-            .status(400)
-            .request(Request.create(HttpMethod.POST, "/api", Collections.emptyMap(), null, Util.UTF_8, template))
-            .build();
+        response = createResponse(byteArray, 400, HttpMethod.POST);
 
         Exception exception = futureHearingErrorDecoder.decode(methodKey, response);
 
@@ -81,10 +84,9 @@ class FutureHearingErrorDecoderTest {
         assertEquals(INVALID_REQUEST, exception.getMessage());
         List<ILoggingEvent> logsList = listAppender.list;
         assertEquals(1, logsList.size());
-        assertEquals(Level.ERROR, logsList.get(0)
-            .getLevel());
-        assertEquals(String.format(EXPECTED_ERROR, 400), logsList.get(0)
-            .getMessage());
+        ILoggingEvent logEvent = logsList.getFirst();
+        assertEquals(Level.ERROR, logEvent.getLevel());
+        assertEquals(String.format(EXPECTED_ERROR, 400), logEvent.getFormattedMessage());
     }
 
     @Test
@@ -94,11 +96,7 @@ class FutureHearingErrorDecoderTest {
         listAppender.start();
         logger.addAppender(listAppender);
 
-        response = Response.builder()
-            .body(byteArrray)
-            .status(401)
-            .request(Request.create(HttpMethod.POST, "/api", Collections.emptyMap(), null, Util.UTF_8, template))
-            .build();
+        response = createResponse(byteArray, 401, HttpMethod.POST);
 
         Exception exception = futureHearingErrorDecoder.decode(methodKey, response);
 
@@ -106,10 +104,9 @@ class FutureHearingErrorDecoderTest {
         assertEquals(INVALID_SECRET, exception.getMessage());
         List<ILoggingEvent> logsList = listAppender.list;
         assertEquals(1, logsList.size());
-        assertEquals(Level.ERROR, logsList.get(0)
-            .getLevel());
-        assertEquals(String.format(EXPECTED_ERROR, 401), logsList.get(0)
-            .getMessage());
+        ILoggingEvent logEvent = logsList.getFirst();
+        assertEquals(Level.ERROR, logEvent.getLevel());
+        assertEquals(String.format(EXPECTED_ERROR, 401), logEvent.getFormattedMessage());
     }
 
     @Test
@@ -119,11 +116,7 @@ class FutureHearingErrorDecoderTest {
         listAppender.start();
         logger.addAppender(listAppender);
 
-        response = Response.builder()
-            .body(byteArrray)
-            .status(404)
-            .request(Request.create(HttpMethod.PUT, "/api", Collections.emptyMap(), null, Util.UTF_8, template))
-            .build();
+        response = createResponse(byteArray, 404, HttpMethod.PUT);
 
         Exception exception = futureHearingErrorDecoder.decode(methodKey, response);
 
@@ -131,10 +124,9 @@ class FutureHearingErrorDecoderTest {
         assertEquals(REQUEST_NOT_FOUND, exception.getMessage());
         List<ILoggingEvent> logsList = listAppender.list;
         assertEquals(1, logsList.size());
-        assertEquals(Level.ERROR, logsList.get(0)
-            .getLevel());
-        assertEquals(String.format(EXPECTED_ERROR, 404), logsList.get(0)
-            .getMessage());
+        ILoggingEvent logEvent = logsList.getFirst();
+        assertEquals(Level.ERROR, logEvent.getLevel());
+        assertEquals(String.format(EXPECTED_ERROR, 404), logEvent.getFormattedMessage());
     }
 
     @Test
@@ -144,11 +136,7 @@ class FutureHearingErrorDecoderTest {
         listAppender.start();
         logger.addAppender(listAppender);
 
-        response = Response.builder()
-            .body(byteArrray)
-            .status(500)
-            .request(Request.create(HttpMethod.POST, "/api", Collections.emptyMap(), null, Util.UTF_8, template))
-            .build();
+        response = createResponse(byteArray, 500, HttpMethod.POST);
 
         Exception exception = futureHearingErrorDecoder.decode(methodKey, response);
 
@@ -156,10 +144,56 @@ class FutureHearingErrorDecoderTest {
         assertEquals(SERVER_ERROR, exception.getMessage());
         List<ILoggingEvent> logsList = listAppender.list;
         assertEquals(1, logsList.size());
-        assertEquals(Level.ERROR, logsList.get(0)
-            .getLevel());
-        assertEquals(String.format(EXPECTED_ERROR, 500), logsList.get(0)
-            .getMessage());
+        ILoggingEvent logEvent = logsList.getFirst();
+        assertEquals(Level.ERROR, logEvent.getLevel());
+        assertEquals(String.format(EXPECTED_ERROR, 500), logEvent.getFormattedMessage());
+    }
+
+    @Test
+    void shouldPopulateApiErrorFields() {
+
+        ListAppender<ILoggingEvent> listAppender = new ListAppender<>();
+        listAppender.start();
+        logger.addAppender(listAppender);
+
+        String apiError = """
+            {
+                "errCode": null,
+                "errorDesc": null,
+                "errLinkId": null,
+                "statusCode": 400,
+                "message": "Missing/Invalid Header Source-System"
+            }
+            """;
+        byte[] apiErrorByteArray = apiError.getBytes(StandardCharsets.UTF_8);
+
+        response = createResponse(apiErrorByteArray, 400, HttpMethod.GET);
+
+        Exception exception = futureHearingErrorDecoder.decode(methodKey, response);
+
+        assertThat(exception).isInstanceOf(BadFutureHearingRequestException.class);
+        BadFutureHearingRequestException badRequestException = (BadFutureHearingRequestException) exception;
+        assertEquals(INVALID_REQUEST, badRequestException.getMessage());
+
+        ErrorDetails errorDetails = badRequestException.getErrorDetails();
+        assertNotNull(errorDetails, "Exception error details should not be null");
+        assertEquals(400, errorDetails.getApiStatusCode(), "Error details has unexpected API status code");
+        assertEquals("Missing/Invalid Header Source-System",
+                     errorDetails.getApiErrorMessage(),
+                     "Error details has unexpected API message");
+
+        List<ILoggingEvent> logsList = listAppender.list;
+        assertEquals(1, logsList.size());
+
+        ILoggingEvent logEvent = logsList.getFirst();
+        assertEquals(Level.ERROR, logEvent.getLevel(), "Log event has unexpected level");
+        assertEquals("Response from FH failed with HTTP code 400, error code null, error message 'null', "
+                         + "AuthErrorCode null, AuthErrorMessage 'null', "
+                         + "ApiStatusCode 400, ApiErrorMessage 'Missing/Invalid Header Source-System'",
+                     logEvent.getFormattedMessage(),
+                     "Log event has unexpected message");
+
+        logger.detachAndStopAllAppenders();
     }
 
     @Test
@@ -170,11 +204,7 @@ class FutureHearingErrorDecoderTest {
         listAppender.start();
         logger.addAppender(listAppender);
 
-        response = Response.builder()
-            .body(byteArrray)
-            .status(400)
-            .request(Request.create(HttpMethod.POST, "/api", Collections.emptyMap(), null, Util.UTF_8, template))
-            .build();
+        response = createResponse(byteArray, 400, HttpMethod.POST);
 
         Exception exception = futureHearingErrorDecoder.decode(methodKey, response);
 
@@ -185,15 +215,15 @@ class FutureHearingErrorDecoderTest {
         assertEquals(Level.ERROR, logsList.get(0)
             .getLevel());
         assertEquals(String.format(EXPECTED_ERROR, 400), logsList.get(0)
-            .getMessage());
+            .getFormattedMessage());
         assertEquals(Level.DEBUG, logsList.get(1)
             .getLevel());
         assertEquals("Request to FH - URL: /api, Method: POST, Payload: n/a", logsList.get(1)
-            .getMessage());
+            .getFormattedMessage());
         assertEquals(Level.DEBUG, logsList.get(2)
             .getLevel());
         assertEquals("Error payload from FH (HTTP 400): " + INPUT_STRING, logsList.get(2)
-            .getMessage());
+            .getFormattedMessage());
     }
 
     @Test
@@ -292,5 +322,13 @@ class FutureHearingErrorDecoderTest {
         assertThat(logsList.stream().anyMatch(
             log -> log.getLevel() == Level.ERROR && log.getMessage().contains("Response from FH failed with error code")
         )).isTrue();
+    }
+
+    private Response createResponse(byte[] body, int status, HttpMethod httpMethod) {
+        return Response.builder()
+            .body(body)
+            .status(status)
+            .request(Request.create(httpMethod, "/api", Collections.emptyMap(), null, Util.UTF_8, template))
+            .build();
     }
 }
